# mysql-s3-backup

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  backup.sh  pyproject.toml  run.py  run.sh
.github/workflows/: ci.yml  docker-image.yml
src/mysql_s3_backup/: __init__.py  __main__.py  backup.py
tests/: conftest.py  test_config.py  test_main.py  test_s3_upload.py
