[project]
name = "mysql-s3-backup"
version = "v2.0.0"
description = "A simple tool to backup MySQL databases to S3"
authors = [
    { name = "Joan Fabrégat", email = "j@fabreg.at" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.13",
    "tenacity>=9.0.0",
]

[project.scripts]
mysql-s3-backup = "mysql_s3_backup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_s3_backup"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
