[project]
name = "mysql-s3-backup"
version = "v2.0.0"
description = "A simple tool to backup MySQL databases to S3"
authors = [
    { name = "Joan Fabrégat", email = "j@fabreg.at" }
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.37.13",
    "tenacity>=9.0.0",
]

[project.scripts]
mysql-s3-backup = "mysql_s3_backup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_s3_backup"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
